welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:17: error: not found: value vubiscuit
			vubiscuit() = true;arriere();
                        ^