welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def continu() = { for (i <- 1 to 6) {avance()}}
def arriere() = { for (i <- 1 to 6) {recule()}}
def vuBiscuit():Boolean = {
	if(!estSurBiscuit()){
		
		return false;
		
		}else{
		return true;
		}
		
		};
def haveBaggle():Boolean = {
	while(!vuBiscuit()){
		if(vuBiscuit()){
			vubiscuit() = true;arriere();
		}else{
			continu();arriere();droite();avance();gauche();
		}
		}
return vuBiscuit;
}

